feat: 订阅远端屏幕共享流
